--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,22 @@ html, body, :root{
     @apply bg-background text-foreground;
   }
 }
+
+/* scrollbar.css */
+
+@layer utilities {
+  /* For Webkit browsers (Chrome, Safari) */
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: var(--background);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #4d39394d;
+    border-radius: 4px;
+  }
+
+}
